Fix text display on mobile

--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ h2 {
   color: white;
   text-align: center;
   font-size: 36px;
+  margin: 2rem 0 0 0
 }
 
 h3 {
@@ -22,7 +23,7 @@ h3 {
   font-size: 20px;
   font-family: Arial, sans-serif;
   font-weight: 200;
-  line-height: 0.3em;
+  margin: 0.8em;
 }
 
 canvas {
